<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ladio Star</string>
    <string name="auto">Auto</string>
    <string name="channel_info">Channel information</string>
    <string name="broadcast_info">Broadcast information</string>
    <string name="setting">Settings</string>
    <string name="channel_dj_name">DJ</string>
    <string name="channel_dj_name_summary">Sets the DJ name</string>
    <string name="channel_dj_name_message">Sets the DJ name. You can input the #tripcode after DJ name.</string>
    <string name="channel_title">Title</string>
    <string name="channel_title_summary">Sets the title</string>
    <string name="channel_title_message">Sets the title</string>
    <string name="channel_description">Description</string>
    <string name="channel_description_summary">Sets the description</string>
    <string name="channel_description_message">Sets the description</string>
    <string name="channel_url">Web site</string>
    <string name="channel_url_summary">Sets the web site of channel</string>
    <string name="channel_url_message">Sets the web site of channel</string>
    <string name="channel_genre">Genre</string>
    <string name="channel_genre_summary">Sets the genre</string>
    <string name="channel_genre_message">Sets the genre</string>
    <string name="channel_mount">Mount name</string>
    <string name="channel_mount_summary">Sets the mount name</string>
    <string name="channel_mount_message">Sets the mount name. You must have a \"/\" at the beginning as \"/example\".</string>
    <string name="channel_server">Broadcasting server</string>
    <string name="channel_server_summary">Sets the broadcasting server. If unsure, please select the \"Auto\".</string>
    <string name="channel_server_message">Sets the broadcasting server. If unsure, please select the \"Auto\".</string>
    <string name="audio_info">Audio information</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="audio_bitrate_summary">Sets the bitrate</string>
    <string name="audio_channel">Mono/Stereo</string>
    <string name="audio_channel_summary">Sets the mono/stereo</string>
    <string name="audio_sample_rate">Sample rate</string>
    <string name="audio_sample_rate_summary">Sets the sample rate. If unsure, please select the \"44100Hz\".</string>
    <string name="audio_mp3_encode_quality">Encode quality</string>
    <string name="audio_mp3_encode_quality_summary">Sets the encode quality. If too high the quality, broadcasting will be stopped.</string>
    <string name="audio_mp3_encode_quality_q0">Best</string>
    <string name="audio_mp3_encode_quality_q1">Highest</string>
    <string name="audio_mp3_encode_quality_q2">Higher</string>
    <string name="audio_mp3_encode_quality_q3">High</string>
    <string name="audio_mp3_encode_quality_q4">A little high</string>
    <string name="audio_mp3_encode_quality_q5">Normal</string>
    <string name="audio_mp3_encode_quality_q6">A little low</string>
    <string name="audio_mp3_encode_quality_q7">Low</string>
    <string name="audio_mp3_encode_quality_q8">Lower</string>
    <string name="audio_mp3_encode_quality_q9">Lowest (for very slow device)</string>
    <string name="anonymous_dj_name">John Doe</string>
    <string name="anonymous_title">No title</string>
    <string name="anonymous_description">Broadcasting in Ladio Star</string>
    <string name="anonymous_genre">-</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="send_bugreport">An unexpected error occurred while running application the last. Do you send error report to the developer? This report are not include your privacy information.</string>
    <string name="mono">Mono</string>
    <string name="stereo">Stereo</string>
    <string name="unknown">Unknown</string>
    <string name="connecting">Connecting...</string>
    <string name="disconnecting">Disconnecting...</string>
    <string name="disable_connect_server">Could not connect to the broadcasting server</string>
    <string name="broadcast_started">Started broadcasting</string>
    <string name="broadcast_stopped">Finished broadcasting</string>
    <string name="disconnected_server">Disconnected from the broadcasting server</string>
    <string name="disable_rec_start_change_channel_or_sample">The recording could not be started. May be able to broadcast if you change the mono/stereo or sample rate setting.</string>
    <string name="disable_rec_start">The recording could not be started</string>
    <string name="disconnect_server">Disconnected the broadcasting server</string>
    <string name="encode_too_slow">Stopped broadcasting. MP3 encode speed is not enough. It is recommended to reduce the bitrate, change to mono, reduce the sample rate or reduce the encode quality.</string>
    <string name="send_data_too_slow">Stopped broadcasting. Transmission speed is not enough. It is recommended to reduce the bitrate.</string>
    <string name="disable_rec">Could not be recorded</string>
    <string name="broadcasting">Broadcasting</string>
    <string name="not_broadcasting">Non broadcasting</string>
    <string name="disable_connect_server_authentication_required">Could not connect to the server. Authentication Failed.</string>
    <string name="disable_connect_server_mountpoint_in_use">Could not connect to the server. Your mount name has been used. Please set another mount name.</string>
    <string name="disable_connect_server_mountpoint_too_long">Could not connect to the server. Your mount name is invalid. You have to set the valid mount name.</string>
    <string name="disable_connect_server_content_type_not_supported">Could not connect to the server. You are broadcast stream not supported format.</string>
    <string name="disable_connect_server_too_many_sources_connected">Could not connect to the server. The sever is busy.</string>
    <string name="disable_connect_server_unknown_error">Could not connect to the server. An unknown error has occurred.</string>
    <string name="disable_encode">Failed to MP3 encode</string>
    <string name="reference_site">Web site</string>
    <string name="broadcasting_notification_title_format">During the broadcast \"%s\".</string>
    <string name="broadcast_state">State</string>
    <string name="failed_rec_stop">Failed to stop broadcasting</string>
    <string name="listeners_num">Listener</string>
    <string name="max_listeners_num">Max</string>
    <string name="total_listeners_num">Total</string>
    <string name="unknown_listeners_num">-</string>
    <string name="broadcast_time">Elapsed time</string>
    <string name="default_broadcast_time">00:00:00</string>
    <string name="volume">Volume</string>
    <string name="mute">Mute</string>
    <string name="mic">Mic</string>
    <string name="_100_percent">100%</string>
    
    <string name="help_main_url" formatted="false">http://translate.google.co.jp/translate?sl=ja&amp;tl=en&amp;js=n&amp;prev=_t&amp;hl=ja&amp;ie=UTF-8&amp;layout=2&amp;eotf=1&amp;u=http%3A%2F%2Fgarage.uraroji.com%2Fsoftware%2Fladio-star%2F%25E4%25BD%25BF%25E3%2581%2584%25E6%2596%25B9%2F</string>
    <string name="help_setting_url" formatted="false">http://translate.google.co.jp/translate?sl=ja&amp;tl=en&amp;js=n&amp;prev=_t&amp;hl=ja&amp;ie=UTF-8&amp;layout=2&amp;eotf=1&amp;u=http%3A%2F%2Fgarage.uraroji.com%2Fsoftware%2Fladio-star%2F%25E4%25BD%25BF%25E3%2581%2584%25E6%2596%25B9%2F%25E8%25A8%25AD%25E5%25AE%259A%25E3%2581%25AB%25E3%2581%25A4%25E3%2581%2584%25E3%2581%25A6%2F</string>

    <color name="main_bottom_background">#5F5F5F</color>

</resources>