<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout
        android:id="@+id/MainButtomFrameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/main_bottom_background"
        android:padding="3dp" >

            <Button
                android:id="@+id/StartStopButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/start" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/MainButtomFrameLayout"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/BroadcastStatusLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <com.google.ads.AdView
                android:id="@+id/MainAd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                ads:adSize="BANNER"
                ads:adUnitId="AD_UNIT_ID"
                ads:loadAdOnCreate="true" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@id/MainAd"
                android:layout_alignParentTop="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/BroadcastStatusTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:textAppearance="@android:style/TextAppearance.Large" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:text="@string/mic" />

                    <ProgressBar
                        android:id="@+id/LoudnessProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginTop="6dp"
                        android:indeterminate="false" />
                </LinearLayout>

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/channel_dj_name" />

                        <TextView
                            android:id="@+id/ChannelDjTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/channel_title" />

                        <TextView
                            android:id="@+id/ChannelTitleTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/channel_genre" />

                        <TextView
                            android:id="@+id/ChannelGenreTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/channel_description" />

                        <TextView
                            android:id="@+id/ChannelDescriptionTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/channel_mount" />

                        <TextView
                            android:id="@+id/ChannelMountTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/listeners_num" />

                        <TextView
                            android:id="@+id/ListenersNumTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/broadcast_time" />

                        <TextView
                            android:id="@+id/BroadcastTimeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/default_broadcast_time" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/volume"
                                android:textAppearance="@android:style/TextAppearance.Small" />

                            <TextView
                                android:id="@+id/VolumeRateTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_100_percent" />
                        </LinearLayout>

                        <SeekBar
                            android:id="@+id/VolumeRateSeekBar"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:max="200"
                            android:progress="100" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/MuteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/mute" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>